Pulled in notebooks from beck/sc-7911/edit-code-samples-notebooks-quickstart-for

--- a/site/notebooks/code_samples/custom_tests/implement_custom_tests.ipynb
+++ b/site/notebooks/code_samples/custom_tests/implement_custom_tests.ipynb
@@ -37,7 +37,9 @@
     "  - [Custom Test: External API Call](#toc9_2_)    \n",
     "  - [Custom Test: Passing Parameters](#toc9_3_)    \n",
     "  - [Custom Test: Multiple Tables and Plots in a Single Test](#toc9_4_)    \n",
-    "  - [Custom Test: Images](#toc9_5_)    \n",
+    "  - [Custom Test: Images](#toc9_5_)\n",
+    "  - [Custom Test: Description](#toc9_6_)\n",
+    "\n",
     "- [Conclusion](#toc10_)    \n",
     "- [Next steps](#toc11_)    \n",
     "  - [Work with your model documentation](#toc11_1_)    \n",
@@ -424,7 +426,7 @@
    "source": [
     "Just so we can run all of the tests in the template, let's initialize the train and raw dataset.\n",
     "\n",
-    "(see the `quickstart_customer_churn_full_suite.ipynb` notebook and the ValidMind docs for more information on what we are doing here)"
+    "(Refer to [**Quickstart for model documentation**](../../quickstart/quickstart_model_documentation.ipynb) and the ValidMind docs for more information on what we are doing here)"
    ]
   },
   {
@@ -865,6 +867,66 @@
     "The image is displayed in the test result:\n",
     "\n",
     "![screenshot showing image from file](../../images/pearson-correlation-matrix-test-output.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='toc9_6_'></a>\n",
+    "\n",
+    "### Custom Test: Description\n",
+    "\n",
+    "If you want to write a custom test description for your custom test instead of it is interpreted through llm, you can do so by returning string in your test."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "@vm.test(\"my_custom_tests.MyCustomTest\")\n",
+    "def my_custom_test(dataset, model):\n",
+    "    \"\"\"\n",
+    "    This is a custom computed test that computes confusion matrix for a binary classification model and return  a string as a test description.\n",
+    "    \"\"\"\n",
+    "    y_true = dataset.y\n",
+    "    y_pred = dataset.y_pred(model)\n",
+    "\n",
+    "    confusion_matrix = metrics.confusion_matrix(y_true, y_pred)\n",
+    "\n",
+    "    cm_display = metrics.ConfusionMatrixDisplay(\n",
+    "        confusion_matrix=confusion_matrix, display_labels=[False, True]\n",
+    "    )\n",
+    "    cm_display.plot()\n",
+    "\n",
+    "    plt.close()  # close the plot to avoid displaying it\n",
+    "\n",
+    "    return cm_display.figure_, \"Test Description - Confusion Matrix\", pd.DataFrame({\"Value\": [1, 2, 3]})  # return the figure object itself\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "You can see here test result description has been customized here. The same result description will be displayed in the UI."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "result = run_test(\n",
+    "    \"my_custom_tests.MyCustomTest\",\n",
+    "    inputs={\"model\": \"model\", \"dataset\": \"test_dataset\"},\n",
+    ")\n",
+    "result.log()"
    ]
   },
   {
