--- a/site/notebooks/templates/next-steps.ipynb
+++ b/site/notebooks/templates/next-steps.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "## Next steps\n",
     "\n",
-    "You can look at the output produced by the ValidMind Library right in the notebook where you ran the code, as you would expect. But there is a better way: use the ValidMind Platform to work with your model documentation."
+    "You can look at the output produced by the ValidMind Library right in the notebook where you ran the code, as you would expect. But there is a better way — use the ValidMind Platform to work with your model documentation."
    ]
   },
   {
