--- a/site/notebooks/tutorials/model_validation/2-start_validation_process.ipynb
+++ b/site/notebooks/tutorials/model_validation/2-start_validation_process.ipynb
@@ -36,7 +36,7 @@
     "  - [Remove highly correlated features](#toc4_4_)    \n",
     "- [Documenting test results](#toc5_)    \n",
     "  - [Configure and run comparison tests](#toc5_1_)    \n",
-    "  - [Log tests with a unique identifiers](#toc5_2_)    \n",
+    "  - [Log tests with unique identifiers](#toc5_2_)    \n",
     "  - [Add test results to reporting](#toc5_3_)    \n",
     "- [Split the preprocessed dataset](#toc6_)    \n",
     "  - [Initialize the split datasets](#toc6_1_)    \n",
@@ -143,7 +143,7 @@
     "In our below example, note that:\n",
     "\n",
     "- The target column, `Exited` has a value of `1` when a customer has churned and `0` otherwise.\n",
-    "- The ValidMind Library provides a wrapper to automatically load the dataset as a Pandas [DataFrame](https://pandas.pydata.org/docs/reference/api/pandas.DataFrame.html) object."
+    "- The ValidMind Library provides a wrapper to automatically load the dataset as a [Pandas DataFrame](https://pandas.pydata.org/docs/reference/api/pandas.DataFrame.html) object. A Pandas Dataframe is a two-dimensional tabular data structure that makes use of rows and columns."
    ]
   },
   {
@@ -650,7 +650,7 @@
    "source": [
     "<a id='toc5_2_'></a>\n",
     "\n",
-    "### Log tests with a unique identifiers\n",
+    "### Log tests with unique identifiers\n",
     "\n",
     "Next, we'll use the previously initialized `vm_balanced_raw_dataset` (that still has a highly correlated `Age` column) as input to run an individual test, then log the result to the ValidMind Platform.\n",
     "\n",
