--- a/site/notebooks/tutorials/model_development/2-start_development_process.ipynb
+++ b/site/notebooks/tutorials/model_development/2-start_development_process.ipynb
@@ -74,6 +74,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id='toc2_'></a>\n",
+    "\n",
     "## Setting up"
    ]
   },
@@ -136,7 +138,7 @@
     "In our below example, note that: \n",
     "\n",
     "- The target column, `Exited` has a value of `1` when a customer has churned and `0` otherwise.\n",
-    "- The ValidMind Library provides a wrapper to automatically load the dataset as a Pandas DataFrame object."
+    "- The ValidMind Library provides a wrapper to automatically load the dataset as a [Pandas DataFrame](https://pandas.pydata.org/docs/reference/api/pandas.DataFrame.html) object. A Pandas Dataframe is a two-dimensional tabular data structure that makes use of rows and columns."
    ]
   },
   {
@@ -686,8 +688,9 @@
     "    <img src= \"add-content-block.gif\" alt=\"Screenshot showing insert block button in model documentation\" style=\"border: 2px solid #083E44; border-radius: 8px; border-right-width: 2px; border-bottom-width: 3px;\">\n",
     "    <br><br>\n",
     "\n",
-    "5. Click **+** and then select **Test-Driven Block**:\n",
+    "5. Click **+** and then select **Test-Driven Block** under FROM LIBRARY:\n",
     "\n",
+    "    - Click on **VM Library** under TEST-DRIVEN in the left sidebar.\n",
     "    - In the search bar, type in `HighPearsonCorrelation`.\n",
     "    - Select `HighPearsonCorrelation:balanced_raw_dataset` as the test.\n",
     "\n",
@@ -880,7 +883,7 @@
     "\n",
     "### Assign predictions\n",
     "\n",
-    "Once the model has been registered you can assign model predictions to the training and test datasets.\n",
+    "Once the model has been registered you can assign model predictions to the training and testing datasets.\n",
     "\n",
     "- The [`assign_predictions()` method](https://docs.validmind.ai/validmind/validmind/vm_models.html#assign_predictions) from the `Dataset` object can link existing predictions to any number of models.\n",
     "- This method links the model's class prediction values and probabilities to our `vm_train_ds` and `vm_test_ds` datasets.\n",
@@ -952,7 +955,7 @@
     "\n",
     "- [x] Import a sample dataset\n",
     "- [x] Identify which tests you might want to run with ValidMind\n",
-    "- [x] Initialize ValidMind datasets\n",
+    "- [x] Initialize ValidMind datasets and model objects\n",
     "- [x] Run individual tests\n",
     "- [x] Utilize the output from tests you've run\n",
     "- [x] Log test results from sets of or individual tests as evidence to the ValidMind Platform\n",
